# scarlet-launcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  cleanup.sh  com.megabytesofrem.scarlet.yaml  legacy.sh  main.cpp  scarlet.py  shrine_loader.py  thcrap-linux-gui.py  thcrap.desktop
app/: main_ui.py  store.py  utils.py
qml/: main.qml  qmldir
qml/components/: GameListItem.qml  Row.qml  StatusDisplay.qml  ThemedButton.qml  helpers.js
qml/shader/: bullet.frag  bullet.vert
qml/theme/: Theme.qml
qml/views/: About.qml  EmptyGamesView.qml  FirstTimeSetupView.qml
resources/: Scarlet.desktop  shrine_loader.desktop
scripts/: build_flatpak.deps.sh  build_flatpak.sh  install.sh  uninstall.sh
src/: app_window.cpp  app_window.h  icon_provider.h  main.cpp  theme_icon_provider.h  utils.cpp  utils.h  wine_worker.cpp  wine_worker.h
src/model/: ListModel.cpp  ListModel.h  list_model.cpp  list_model.h  store.h
src/provider/: icon_provider.h  theme_icon_provider.h
